<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">点应</string>
    <string name="app_name_inner">云通讯IM(内部使用)</string>
    <string name="app_server_view">登陆参数配置</string>
    <string name="app_server_config_error_tips">请先进行登陆参数配置</string>
    <string name="app_server_config">配置</string>
    <string name="app_login_auto">一键登陆</string>
    <string name="app_input_paras_error">请检查输入参数是否正确</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="miui_font_family">miui</string>
    <string name="confirm_dialog_edittext_hint">说些什么</string>
    <string name="tab_view_name">EC_TAB_NAME</string>
    <string name="main_title">沟通</string>
    <string name="main_contact">通讯录</string>
    <string name="main_group">群组</string>
    <string name="main_discussiongroup">讨论组</string>
    <string name="unread_count_overt_100">"..."</string>
    <string name="common_enter_activity">当前所在页面,</string>
    <string name="logout_menu_more">更多</string>
    <string name="main_empty_conversation">暂无聊天信息</string>
    <string name="main_empty_search_group">暂无结果</string>
    <string name="main_empty_notice">暂无系统通知</string>
    <string name="main_empty_group">暂无群组列表</string>
    <string name="main_empty_dis">暂无讨论组列表</string>
    <string name="avatar_desc">头像</string>
    <string name="media_ejected">储存卡已拔出，语音功能将暂时不可用</string>
    <string name="media_no_memory">储存卡存储空间不足</string>
    <string name="voice_cancel_rcd_release">松开手指，取消发送</string>
    <string name="chatfooter_releasetofinish">松开 结束</string>
    <string name="chatfooter_presstorcd">按住 说话</string>
    <string name="chatting_send">发送</string>
    <string name="chat_footer_app_btn">更多</string>
    <string name="chat_footer_smiley_btn">表情</string>
    <string name="chat_footer_switch_mode_btn">语音说话与键盘输入切换</string>
    <string name="chat_footer_switch_mode_voice_btn">切换到按住说话</string>
    <string name="chat_footer_switch_mode_keybord_btn">切换到键盘</string>
    <string name="chatfooter_cancel_rcd">手指上滑，取消发送</string>
    <string name="chatfooter_cancel_rcd_release">松开手指，取消发送</string>
    <string name="chatfooter_too_short">录音时间太短</string>
    <string name="app_new">new</string>
    <string name="app_panel_pic">图片</string>
    <string name="app_panel_tackpic">拍照</string>
    <string name="app_panel_file">文件</string>
    <string name="app_panel_voice">语音通话</string>
    <string name="app_panel_video">视频通话</string>
    <string name="fmt_time_length">%d\"</string>
    <string name="login_account_hint">请输入云通讯注册邮箱/手机</string>
    <string name="login_password_hint">请输入密码</string>
    <string name="str_no_choice_account">还未选择子账号，请点选</string>
    <string name="str_start_ex">开始体验</string>
    <string name="main_sending">正在发送中</string>
    <string name="tips_regist_1">"登陆<font color="#1DB87F">yuntongxun.com</font>并注册"</string>
    <string name="tips_regist_2">填写注册基本资料</string>
    <string name="tips_regist_3">注册成功，获得8元测试体验费</string>
    <string name="login_yuntongxun">云通讯登录</string>
    <string name="login_regist">注册</string>
    <string name="login_login">登 录</string>
    <string name="login_submit">提 交</string>
    <string name="tips_login_accountpwd_null">帐号或密码不能为空</string>
    <string name="tab_loading">正在加载…</string>
    <string name="app_tip">提示</string>
    <string name="app_crash_tips">崩溃警告</string>
    <string name="app_update">更新</string>
    <string name="app_cancel">取消</string>
    <string name="entrance_chat_tips">与TA沟通（IM）</string>
    <string name="entrance_voip_chat_tips">与TA沟通（通话）</string>
    <string name="contact_contactDetail">联系人详情</string>
    <string name="contact_none">联系人不存在</string>
    <string name="main_plus_chat">发起会话/群聊</string>
    <string name="main_plus_groupchat">创建群组</string>
    <string name="main_plus_querygroup">查找群组</string>
    <string name="main_plus_mcmessage">在线客服</string>
    <string name="main_plus_inter_phone">实时对讲</string>
    <string name="main_plus_meeting_voice">语音会议</string>
    <string name="main_plus_settings">设置</string>
    <string name="main_title_select_account">选择登陆帐号</string>
    <string name="str_group_name_hint">群组名称</string>
    <string name="str_group_notice_hint">群公告(选填)</string>
    <string name="app_button_create">创建</string>
    <string name="app_title_create_new_group">建立新群组</string>
    <string name="app_title_search_group">搜索群组</string>
    <string name="app_title_setting_persioninfo">设置个人信息</string>
    <string name="app_set">设置</string>
    <string name="select_contacts">选择联系人</string>
    <string name="settings_new_msg_notify">消息免打扰</string>
    <string name="settings_new_msg_notification_sound">新消息声音</string>
    <string name="settings_new_msg_notification_shake">新消息震动</string>
    <string name="settings_server_address">服务器地址</string>
    <string name="settings_appkey">AppKey</string>
    <string name="settings_apptoken">Token</string>
    <string name="settings_updater">更新版本</string>
    <string name="settings_exit_title">退出客户端</string>
    <string name="settings_switch_title">退出当前账号</string>
    <string name="settings_exit_warning_title">关闭后，你的朋友可能无法及时联系上你，还可能会影响到Demo使用体验</string>
    <string name="settings_exit_warning_cb">有新消息时在通知栏提醒</string>
    <string name="address_history_group_card">选择一个群</string>
    <string name="address_group_card_empty_tip">暂无群聊可选</string>
    <string name="address_select_group_card">选择群聊</string>
    <string name="radar_ok_count" formatted="false">%s(%d)</string>
    <string name="dialog_ok_button">确定</string>
    <string name="dialog_ok_skip">跳过</string>
    <string name="str_group_notice_tips">群公告</string>
    <string name="str_group_profile_tips">群简介</string>
    <string name="str_group_members_tips">成员个数(%d)</string>
    <string name="str_discussion_members_tips">成员个数(%d)</string>
    <string name="str_group_members_titletips">(%d)</string>
    <string name="str_group_remove">踢出</string>
    <string name="str_group_speak_enable">恢复</string>
    <string name="str_group_speak_disenable">禁言</string>
    <string name="plugin_file_explorer_root_tag">设备</string>
    <string name="plugin_file_explorer_sdcard_tag">存储卡</string>
    <string name="plugin_file_explorer_ui_title">添加附件</string>
    <string name="clear_chat">清空聊天记录</string>
    <string name="group_title_name">群名称</string>
    <string name="clear_system_notice">清空系统通知</string>
    <string name="str_group_quit">退出该群组</string>
    <string name="str_group_dissolution">解散群组</string>
    <string name="str_group_invite">邀请成员加入</string>
    <string name="str_group_member_remove_tips">确定要将群组成员[%s]移除出群组吗？</string>
    <string name="str_group_member_setas_manager">确定要将群组成员[%s]设置成管理员吗？</string>
    <string name="str_group_member_cancel_setas_manager">确定要将群组成员[%s]取消管理员吗？</string>
    <string name="str_group_member_speak_tips">确定要将群成员[%s]设置为禁言状态？</string>
    <string name="videomeeting_member_publish">[%s]发布视频</string>
    <string name="videomeeting_member_unpublish">[%s]取消发布视频</string>
    <string name="str_group_member_unspeak_tips">确定要取消群成员[%s]禁言状态？</string>
    <string name="group_invite_reason" formatted="false">%s邀请你加入群组[%s]</string>
    <string name="group_apply_reason" formatted="false">%s申请加入群组</string>
    <string name="group_apply_btn">申请加入</string>
    <string name="app_title_notice">系统通知</string>
    <string name="app_clear">清空</string>
    <string name="dialog_btn_confim">确认</string>
    <string name="dialog_btn_cancel">取消</string>
    <string name="dialog_title_alert">提示</string>
    <string name="loading_press">请稍候，正在提交...</string>
    <string name="plugin_upload_attach_size_tip">文件大小为：%s，确定要上传为附件吗？</string>
    <string name="app_title_image_preview">预览</string>
    <string name="errormsg_server">网络请求失败，请稍后重试</string>
    <string name="imgdownload_fail">下载图片失败</string>
    <string name="imgdownload_fail_or_cleaned">图片已过期或已被清理</string>
    <string name="imgdownload_hdimg_download_tip">正在加载原始图片，由于尺寸较大，可能需要较长时间</string>
    <string name="app_pic">[图片]</string>
    <string name="app_music">[音乐]</string>
    <string name="app_voice">[语音]</string>
    <string name="app_video">[视频]</string>
    <string name="app_file">[文件]</string>
    <string name="app_location">[位置]</string>
    <string name="notification_fmt_one_txttype">%s发来1条消息</string>
    <string name="notification_fmt_one_imgtype">%s发来1张图片</string>
    <string name="notification_fmt_one_voicetype">%s发来1段语音</string>
    <string name="notification_fmt_one_filetype">%s发来1个文件</string>
    <string name="str_system_message_group_notice">群组通知</string>
    <string name="login_posting">正在登录，请稍候</string>
    <string name="login_posting_submit">正在提交，请稍候</string>
    <string name="create_group_posting">正在创建群组，请稍候</string>
    <string name="create_dis_posting">正在创建讨论组，请稍候</string>
    <string name="search_group_posting">正在搜索群组，请稍候</string>
    <string name="create_chatroom_posting">正在发起群聊</string>
    <string name="invite_join_group_posting">正在邀请成员，请稍候</string>
    <string name="group_exit_posting">正在退出，请稍候</string>
    <string name="group_remove_member_posting">正在移除成员，请稍候</string>
    <string name="settings_logout">退出</string>
    <string name="posting_logout">正在退出，请稍后</string>
    <string name="settings_logout_warning_tip">退出后不会删除任何历史数据，下次登录依然可以使用本帐号</string>
    <string name="connect_server_error">无法连接到服务器</string>
    <string name="connecting_server">正在连接服务器...</string>
    <string name="chatting_resend_title">提示</string>
    <string name="chatting_resend_content">确认重发该消息？</string>
    <string name="pull_to_refresh">下拉可以刷新</string>
    <string name="release_to_refresh">释放立即刷新</string>
    <string name="refreshing">正在加载…</string>
    <string name="not_updated_yet">暂未更新过</string>
    <string name="updated_at">上次更新于%1$s前</string>
    <string name="updated_just_now">刚刚更新</string>
    <string name="time_error">时间有问题</string>
    <string name="copyright">©Copyright 容联云通讯</string>
    <string name="login_prompt_ip">IP</string>
    <string name="login_prompt_port">port</string>
    <string name="login_prompt_appkey">appkry</string>
    <string name="login_prompt_token">token</string>
    <string name="login_prompt_mobile">手机号码：</string>
    <string name="login_prompt_mobile_hint">请输入手机号</string>
    <string name="login_prompt_VoIP_account">VoIP账号</string>
    <string name="login_prompt_VoIP_pass">VoIP密码</string>
    <string name="login_prompt_VoIP_account_tips">请输入VoIP账号</string>
    <string name="login_prompt_VoIP_pass_tips">请输入VoIP密码</string>
    <string name="login_prompt_nickname">昵  称</string>
    <string name="login_prompt_sign">签  名</string>
    <string name="login_title_activity">login_title_activity</string>
    <string name="mobile_contact">手机联系人</string>
    <string name="mobile_list_empty">联系人账号为空</string>
    <string name="group_card_id">群组id</string>
    <string name="group_card_userid">用户id</string>
    <string name="group_card_gender">性别</string>
    <string name="group_card_name">昵称</string>
    <string name="group_card_tel">电话</string>
    <string name="group_card_email">邮箱</string>
    <string name="group_card_remark">备注</string>
    <string name="setup_connect">connect地址</string>
    <string name="setup_lvs">LVS地址</string>
    <string name="setup_File">FileServer地址</string>
    <string name="setup_appid">appId</string>
    <string name="setup_apptoken">appToken</string>
    <string name="setup_name">配置名称</string>
    <string name="str_room_name_hint">聊天室名字</string>
    <string name="str_room_notice_hint">聊天室公告</string>
    <string name="str_room_notice_provice">透传字段(可选)</string>
    <string name="login_prompt_VoIP_pass_tow">请输入密码</string>
    <string name="login_prompt_VoIP_pass_pwd">密码</string>
    <string name="login_prompt_VoIP_pass_sms">验证码</string>
    <string name="login_prompt_VoIP_pass_tow_sms">请输入验证码</string>
    <string name="phone_sms">获取验证码</string>
    <string name="phone_regi_sure">确认注册</string>
    <string name="login_prompt_mobile_hint_pwd">请输入密码</string>
    <string name="login_prompt_mobile_pwd">密码</string>
</resources>