<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:form="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/NavPage"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    >



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:layout_height="wrap_content">

            <com.henry.ecdemo.common.base.CCPFormInputView
                android:id="@+id/phone_login_mobile"
                style="@style/CCPFormInputView"
                form:form_hint="@string/login_prompt_mobile_hint"
                form:form_layout="@layout/ccp_form_input_clear_et_view"
                form:form_title="@string/login_prompt_mobile" />

            <com.henry.ecdemo.common.base.CCPFormInputView
                android:id="@+id/phone_login_pwd"
                style="@style/CCPFormInputView"
                form:form_hint="@string/login_prompt_VoIP_pass_tow"
                form:form_layout="@layout/ccp_form_input_clear_et_view"
                form:form_title="@string/login_prompt_VoIP_pass_pwd" />

            <Button
                android:id="@+id/phone_sign_in_button"
                style="@style/CCPBigRedButton"
                android:layout_marginTop="16dp"
                android:text="@string/login_login" />


    </LinearLayout>

</RelativeLayout>
