<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@color/navpage"
    android:layout_width="match_parent" android:layout_height="match_parent">


    <LinearLayout
        style="@style/CCPBody"
        android:paddingTop="10.0dip" >

        <com.henry.ecdemo.common.base.CCPClearEditText
            android:id="@+id/room_name"
            style="@style/CCPLineEditText"
            android:layout_marginTop="@dimen/NormalPadding"
            android:background="@drawable/edittext_bg_selector"
            android:hint="@string/str_room_name_hint"
            android:paddingLeft="10.0dip"
            android:paddingRight="10.0dip"
            android:singleLine="false" >

            <requestFocus />
        </com.henry.ecdemo.common.base.CCPClearEditText>

        <com.henry.ecdemo.common.base.CCPClearEditText
            android:id="@+id/room_notice"
            style="@style/CCPLineEditText"
            android:layout_marginTop="@dimen/NormalPadding"
            android:background="@drawable/edittext_bg_selector"
            android:hint="@string/str_room_notice_hint"
            android:inputType="textMultiLine"
            android:maxLines="3"
            android:paddingLeft="10.0dip"
            android:paddingRight="10.0dip" />
        <com.henry.ecdemo.common.base.CCPClearEditText
            android:id="@+id/room_ext"
            style="@style/CCPLineEditText"
            android:layout_marginTop="@dimen/NormalPadding"
            android:background="@drawable/edittext_bg_selector"
            android:hint="@string/str_room_notice_provice"
            android:maxLength="30"
            android:inputType="textMultiLine"
            android:maxLines="3"
            android:paddingLeft="10.0dip"
            android:paddingRight="10.0dip"/>
        <Button
            android:id="@+id/create"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10.0dip"
            android:onClick="onClick"
            style="@style/CCPBigRedButton"
            android:text="@string/app_button_create"
            android:textSize="@dimen/TitleTextSize" />
    </LinearLayout>


</RelativeLayout>