<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ecdemo="http://schemas.android.com/apk/res-auto"
    style="@style/NavPage"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fadingEdge="none"
    android:background="#E4E3E3"
    android:fillViewport="true" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="130.0dip"
        android:orientation="vertical" >

        // 登陆设置
        <com.henry.ecdemo.common.view.SettingItem
            android:id="@+id/settings_serverIP"
            style="@style/settings_item_layout_single"
            ecdemo:item_accessoryType="arrow"
            android:layout_marginTop="@dimen/LargerPadding"
            ecdemo:item_showDivider="true"
            ecdemo:item_titleText="@string/settings_server_address" />

        <com.henry.ecdemo.common.view.SettingItem
            android:id="@+id/settings_appkey"
            style="@style/settings_item_layout_single"
            ecdemo:item_accessoryType="arrow"
            ecdemo:item_showDivider="true"
            ecdemo:item_titleText="@string/settings_appkey" />

        <com.henry.ecdemo.common.view.SettingItem
            android:id="@+id/settings_token"
            style="@style/settings_item_layout_single"
            ecdemo:item_accessoryType="arrow"
            ecdemo:item_showDivider="false"
            ecdemo:item_titleText="@string/settings_apptoken" />

    </LinearLayout>

</ScrollView>